--- a/.github/workflows/master-check.yml
+++ b/.github/workflows/master-check.yml
@@ -18,4 +18,10 @@ jobs:
           distribution: 'adopt'
       
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build jacocoTestReport
+        
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          generate-branches-badge: true
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
