--- a/.github/workflows/master-check.yml
+++ b/.github/workflows/master-check.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'adopt'
       
       - name: Build with Gradle
-        run: ./gradlew build jacocoTestReport
+        run: ./gradlew build jacocoTestReport docker
         
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
