--- a/.github/workflows/master-check.yml
+++ b/.github/workflows/master-check.yml
@@ -3,6 +3,10 @@ name: Master branch CI
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - 'README.md'
 
 jobs:
   build:
