--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,10 @@ logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
   level:
-    org.springframework: info
-    org.hibernate: debug
+    root: WARN
+    cz.loono.backend: INFO
+    org.springframework: WARN
+    org.hibernate: WARN
 # Server configuration
 server:
   port: 8080
