Removed basic auth over healthcheck

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,6 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     open-in-view: false
     generate-ddl: true
-  # Spring security
-  security:
-    user:
-      name: monitor
-      password: fCwfHpjhDeV5s5jZ
-      roles: ACTUATOR
 # Logger configuration
 logging:
   pattern:
@@ -34,7 +28,5 @@ logging:
 server:
   port: 8080
 # Health indicators
-management.endpoint.health:
-  roles: ACTUATOR
-  show-details: always
+management.endpoint.health.show-details: always
 management.health.db.enabled: true
