--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,6 @@ server:
   port: 8080
 # Health indicators
 management.endpoint.health.show-details: always
-management.health.db.enabled: true
+management.health:
+  db.enabled: true
+  diskspace.enabled: false
