--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -17,6 +17,7 @@ jobs:
         id: myRequest
         uses: fjogeleit/http-request-action@master
         with:
+          method: 'GET'
           url: "https://loono.ceskodigital.net/actuator/health"
       - name: Show Response
         run: echo ${{ steps.myRequest.outputs.response }}
