--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -13,11 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Make Request
-        id: myRequest
+      - name: Sleep for 30 seconds
+        run: sleep 30s
+        shell: bash
+      - name: Health check
+        id: check
         uses: fjogeleit/http-request-action@master
         with:
           method: 'GET'
           url: "https://loono.ceskodigital.net/actuator/health"
       - name: Show Response
-        run: echo ${{ steps.myRequest.outputs.response }}
+        run: echo ${{ steps.check.outputs.response }}
