--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -25,8 +25,11 @@ jobs:
       - name: Show Response
         run: echo ${{ steps.healthcheck.outputs.response }}
       - name: Healthcheck validation
+        id: valid
         uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
         with:
           request-method: "GET"
           request-url: "https://loono.ceskodigital.net/actuator/health"
-          validate-expression: "response[0].status == 'UP' && response[0].components.db.status == 'UP' && response[0].components.ping.status == 'X'"
+          validate-json: '{"status":"UP","components":{"db":{"status":"UP","details":{"database":"PostgreSQL","validationQuery":"isValid()"}},"ping":{"status":"UP"}}}'
+      - name: Show Response
+        run: echo ${{ steps.valid.outputs.valid }}
