--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -16,20 +16,15 @@ jobs:
       - name: Sleep for 30 seconds
         run: sleep 30s
         shell: bash
-      - name: Health check
-        id: healthcheck
-        uses: fjogeleit/http-request-action@master
-        with:
-          method: 'GET'
-          url: "https://loono.ceskodigital.net/actuator/health"
-      - name: Show Response
-        run: echo ${{ steps.healthcheck.outputs.response }}
       - name: Healthcheck validation
-        id: valid
         uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
         with:
           request-method: "GET"
           request-url: "https://loono.ceskodigital.net/actuator/health"
           validate-json: '{"status":"UP","components":{"db":{"status":"UP","details":{"database":"PostgreSQL","validationQuery":"isValid()"}},"ping":{"status":"UP"}}}'
-      - name: Show Response
-        run: echo ${{ steps.valid.outputs.valid }}
+      - name: OpenAPI validation
+        uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
+        with:
+          request-method: "GET"
+          request-url: "https://loono.ceskodigital.net/v3/api-docs"
+          validate-expression: "response[0].info.title == 'The Loono API'"
