--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -17,6 +17,7 @@ jobs:
         run: sleep 30s
         shell: bash
       - name: Healthcheck validation
+        id: check
         uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
         with:
           request-method: "GET"
@@ -29,5 +30,7 @@ jobs:
           request-method: "GET"
           request-url: "https://loono.ceskodigital.net/v3/api-docs"
           validate-expression: "response[0].info.title == 'The Loono API   XXX'"
+      - name: Show Response
+        run: echo ${{ steps.check.outputs.valid }}
       - name: Show Response
         run: echo ${{ steps.doc.outputs.valid }}
