--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -18,19 +18,8 @@ jobs:
         shell: bash
       - name: Healthcheck validation
         id: check
-        uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
+        uses: fjogeleit/http-request-action@master
         with:
-          request-method: "GET"
-          request-url: "https://loono.ceskodigital.net/actuator/health"
-          validate-json: '{"status":"UP","components":{"db":{"status":"XX","details":{"database":"PostgreSQL","validationQuery":"isValid()"}},"ping":{"status":"UP"}}}'
-      - name: OpenAPI validation
-        id: doc
-        uses: TobiasOlofsson88/github-action-validate-json-request-result@v1.0.5
-        with:
-          request-method: "GET"
-          request-url: "https://loono.ceskodigital.net/v3/api-docs"
-          validate-expression: "response.info.title == 'The Loono API   XXX'"
+          url: "https://loono.ceskodigital.net/actuator/health"
       - name: Show Response
-        run: echo ${{ steps.check.outputs.valid }}
-      - name: Show Response
-        run: echo ${{ steps.doc.outputs.valid }}
+        run: echo ${{ steps.check.outputs.response }}
