--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -21,5 +21,6 @@ jobs:
         uses: fjogeleit/http-request-action@master
         with:
           url: "https://loono.ceskodigital.net/actuator/health"
+          method: 'GET'
       - name: Show Response
         run: echo ${{ steps.check.outputs.response }}
