--- a/.github/workflows/post-deploy-tests.yml
+++ b/.github/workflows/post-deploy-tests.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Sleep for 30 seconds
+      - name: Sleep for 30 seconds to waiting for the server start
         run: sleep 30s
         shell: bash
+        
+      # Healthcheck
       - name: Healthcheck request
         id: check
         uses: fjogeleit/http-request-action@master
@@ -30,8 +32,8 @@ jobs:
           status: "status"
           db: "components.db.status"
           ping: "components.ping.status"
-      - name: Show Response
-        run: echo "${{ steps.checkval.outputs.status }} ${{ steps.checkval.outputs.db }} ${{ steps.checkval.outputs.ping }}"
       - name: Healthcheck evaluation
-        if: ${{ steps.checkval.outputs.status }} == "UP" && ${{ steps.checkval.outputs.db }} == "UP" && ${{ steps.checkval.outputs.ping }} == "UP"
-        run: exit 1
+        if: ${{ steps.checkval.outputs.status }} != "UP" || ${{ steps.checkval.outputs.db }} != "UP" || ${{ steps.checkval.outputs.ping }} != "UP"
+        run: |
+          echo "Healthcheck status is not UP!"
+          exit 1
