--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,10 +20,10 @@ logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
   level:
-    root: DEBUG
-    cz.loono.backend: DEBUG
-    org.springframework: DEBUG
-    org.hibernate: DEBUG
+    root: WARN
+    cz.loono.backend: INFO
+    org.springframework: WARN
+    org.hibernate: WARN
 # Server configuration
 server:
   port: 8080
