Date improvements and library update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ logging:
 # Server configuration
 server:
   port: 8080
+  error.path: "/error"
 # Health indicators
 management.endpoint.health.show-details: always
 management.health:
