--- a/.github/workflows/master-check.yml
+++ b/.github/workflows/master-check.yml
@@ -22,10 +22,4 @@ jobs:
           distribution: 'adopt'
       
       - name: Build with Gradle
-        run: ./gradlew build jacocoTestReport --stacktrace
-        
-      - name: Generate JaCoCo Badge
-        uses: cicirello/jacoco-badge-generator@v2
-        with:
-          generate-branches-badge: true
-          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+        run: ./gradlew build
