--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     show-sql: false
     database: postgresql
     generate-ddl: true
+    open-in-view: true
   # Throw 404 when no request handler can be found
   mvc:
     throw-exception-if-no-handler-found: true
