LOON-404: Cancellation task scheduler (#24)
* LOON-404: Cancellation task scheduler

* LOON-404: code improvements

* Cron definition moved to the application.yml

* Changed quotes to double ones

Co-authored-by: Radek Poskočil <r.poskocil@quadient.com>

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,3 +38,6 @@ management.endpoint.health.show-details: always
 management.health:
   db.enabled: true
   diskspace.enabled: false
+scheduler.cron:
+  daily-task: "0 0 3 * * ?"
+  data-update: "0 0 2 2 * ?"
