--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -1,13 +1,13 @@
 name: 'Deploy backend to ECS'
 on:
-  push:
+  push, workflow_dispatch:
     branches:
       - master
     paths-ignore:
       - '.github/**'
       - '.gitignore'
       - 'README.md'
-      - 'LICENSE'
+      - 'LICENSE
 
 env:
   region: ${{ secrets.AWS_REGION }}
