--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -8,7 +8,7 @@ on:
       - '.github/**'
       - '.gitignore'
       - 'README.md'
-      - 'LICENSE
+      - 'LICENSE'
 
 env:
   region: ${{ secrets.AWS_REGION }}
