Docker run analysis

--- a/.github/workflows/check.license.yml
+++ b/.github/workflows/check.license.yml
@@ -25,6 +25,14 @@ jobs:
           cd scancode
           docker build -t scancode-toolkit .
 
-      - name: Run Docker
+      - name: Run Scancode help
         run: |
           docker run scancode-toolkit --help
+
+      - name: Run Scancode analysis
+        run: |
+          docker run -v $PWD/:/project scancode-toolkit -clpeui --json-pp /project/result.json /project
+
+      - name: Echo json
+        run: |
+          cat result.json
