--- a/.github/workflows/check.license.yml
+++ b/.github/workflows/check.license.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: nexB/scancode-toolkit
-          path: $HOME/work/scancode
+          path: ~/work/scancode
 
       - name: List files
         run: |
@@ -22,7 +22,10 @@ jobs:
           echo $HOME
           ls .
           echo "=================="
-          ls $HOME/work/scancode
+          ls ~/work/scancode
+          
+          echo "=================="
+          ls ~/work
 
 #      - name: Create Docker
 #        run: |
