--- a/.github/workflows/check.license.yml
+++ b/.github/workflows/check.license.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           echo $PWD
           echo $HOME
+          echo $GITHUB_WORKSPACE
           ls .
           
           echo "=================="
