--- a/.github/workflows/check.license.yml
+++ b/.github/workflows/check.license.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: nexB/scancode-toolkit
-          path: ~/work/scancode
+          path: ../scancode
 
       - name: List files
         run: |
@@ -24,7 +24,7 @@ jobs:
           ls .
           
           echo "=================="
-          ls ~/work
+          ls ../scancode
 
 #      - name: Create Docker
 #        run: |
