--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-/infrastructure/** @martin-ladecky
+/infrastructure/** @martinwenisch
 
-/.github/workflows/** @martin-ladecky
+/.github/workflows/** @martinwenisch
