All secrets are devel secrets.

--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
 env:
-  region: ${{ secrets.AWS_REGION }}
-  repository: ${{ secrets.AWS_REPOSITORY }}
+  region: ${{ secrets.DEVEL_AWS_REGION }}
+  repository: ${{ secrets.DEVEL_AWS_REPOSITORY }}
   serviceName: 'loono-backend'
 jobs:
   deploy:
@@ -18,8 +18,8 @@ jobs:
         run: |
           aws ecr get-login-password --region ${{ env.region }} | docker login --username AWS --password-stdin ${{ env.repository }}/${{ env.serviceName }}
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEVEL_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEVEL_AWS_SECRET_ACCESS_KEY }}
       - name: 'Build Docker image'
         run: |
           docker build -t ${{ env.serviceName }} .
@@ -31,5 +31,5 @@ jobs:
         run: |
           aws --region ${{ env.region }} ecs update-service --cluster ${{ env.serviceName }} --service ${{ env.serviceName }} --force-new-deployment
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEVEL_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEVEL_AWS_SECRET_ACCESS_KEY }}
