--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - devel
 env:
   region: ${{ secrets.DEVEL_AWS_REGION }}
   repository: ${{ secrets.DEVEL_AWS_REPOSITORY }}
