--- a/.github/workflows/build_and_test_check.yml
+++ b/.github/workflows/build_and_test_check.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build with Gradle
         env:
-          ONESIGNAL_API_KEY: ${{ secrets.ONESIGNAL_API_KEY }}
+          ONESIGNAL_API_KEY: ${{ secrets.DEVEL_ONESIGNAL_API_KEY }}
         run: |
           ./gradlew build -x ktlintMainSourceSetCheck 
 
