--- a/.github/workflows/build_and_test_check.yml
+++ b/.github/workflows/build_and_test_check.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Build with Gradle
         env:
           ONESIGNAL_API_KEY: ${{ secrets.DEVEL_ONESIGNAL_API_KEY}}
+          ONESIGNAL_APP_ID: ${{ secrets.DEVEL_ONESIGNAL_APP_ID}}
         run: |
           ./gradlew build -x ktlintMainSourceSetCheck 
 
