--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,9 +26,9 @@ logging:
     console: "%d %-5level %logger : %msg%n"
   level:
     root: WARN
-    cz.loono.backend: INFO
-    org.springframework: WARN
-    org.hibernate: WARN
+    cz.loono.backend: DEBUG
+    org.springframework: DEBUG
+    org.hibernate: DEBUG
     org.flywaydb: INFO
 # Server configuration
 server:
