Add logger info

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 # Spring Boot configuration
 spring:
+  # Database
   datasource:
-    username: postgres
-    password: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5435/postgres
+    url: jdbc:postgresql://${POSTGRE_URL}
+    username: ${POSTGRE_USER}
+    password: ${POSTGRE_PWD}
   # JPA properties
   jpa:
     hibernate:
