#22 swagger doc - prod env var added

--- a/.github/workflows/build_and_test_check.yml
+++ b/.github/workflows/build_and_test_check.yml
@@ -19,6 +19,7 @@ jobs:
         env:
           ONESIGNAL_API_KEY: ${{ secrets.PROD_ONESIGNAL_API_KEY}}
           ONESIGNAL_APP_ID: ${{ secrets.PROD_ONESIGNAL_APP_ID}}
+          ENABLE_SWAGGER: ${{ secrets.PROD_ENABLE_SWAGGER}}
         run: |
           ./gradlew build -x ktlintMainSourceSetCheck 
 
