--- a/backend/src/main/resources/texts/notification.properties
+++ b/backend/src/main/resources/texts/notification.properties
@@ -11,9 +11,9 @@ coming.visit.text=Zítra jde\u0161 _TYPE_ na preventivní prohlídku.
 self.first.title=První samovy\u0161et\u0159ení \u010deká
 self.first.text=Zvládne ho opravu ka\u017edý a nezabere to ani p\u011bt minut.
 self.common.title=Je \u010das na samovy\u0161et\u0159ení
-self.common.text=Po m\u011bsíci p\u0159i\u0161el \u010das si sáhnout na _SELF1_.
-self.result.title=Má\u0161 _SELF1_ zdravá?
-self.result.text=P\u0159ed \u010dasem se ti na _SELF2_ n\u011bco nezdálo. Jak dopadla prohlídka u léka\u0159e?
+self.common.text=Po m\u011bsíci p\u0159i\u0161el \u010das se vy\u0161et\u0159it, zda je v\u0161e v po\u0159ádku.
+self.result.title=Je v\u0161e v po\u0159ádku?
+self.result.text=P\u0159ed \u010dasem se ti p\u0159i samovy\u0161et\u0159ení n\u011bco nezdálo. Jak dopadla prohlídka u léka\u0159e?
 badge.coat=plá\u0161\u0165
 badge.shield=\u0161tít
 badge.glasses=brýle
