notification text and dates

--- a/backend/src/main/resources/texts/notification.properties
+++ b/backend/src/main/resources/texts/notification.properties
@@ -33,6 +33,43 @@ type.ophthalmologist=k o\u010dnímu léka\u0159i
 type.ultrasound_breast=na ultrazvuk prsu
 type.urologist=k urologovi
 type.venereal_diseases=na kontrolu
+type.physiontherapy=k fyzioterapeutovi
+type.pediatrician=k pediatrovi
+type.gynecology_and_obstetrics=ke gynekologovi
+type.intern=na internu
+type.ocular=k o\u010dnímu léka\u0159i
+type.surgery=na chirurgii
+type.orthopedics=k ortopedovi
+type.rehabilitation=na rehabilitaci
+type.psychiatry=k psychiatrovi
+type.neurology=k neurologovi
+type.tanner=ke ko\u017en\u00edmu
+type.psychology=k psychologovi
+type.endocrinology_and_hormones=na endokrinologii
+type.dental_hygiene=na zubni hygienu
+type.cardiology=na kardiologii
+type.orl=na ORL
+type.speech_therapist=k logopedovi
+type.urology=k urologovi
+type.allergology=na alergologii
+type.immunology=na imunologii
+type.orthodontics=na ortodoncii
+type.pulmonary=na plicn\u00ed
+type.hematology=na hematologii
+type.gastroenterology=na gastroenterologii
+type.rheumatology=na revmatologii
+type.palliative_medicine=na paliativn\u00ed medic\u00ednu
+type.nephrology=na nefrologii
+type.vascular=na cevn\u00ed
+type.ergotherapy=na ergoterapii
+type.oncology=na onkologii
+type.nutrition=na nutri\u010dn\u00ed
+type.phoniatrics=na foniatrii
+type.genetics=na genetiku
+type.sports_medicine=na sportovní medicínu
+type.sexology=na sexuologii
+type.reproductive_medicine=na reproduk\u010dní medicínu
+type.other=jiné
 self.male.1=varlata
 self.male.2=varlatech
 self.female.1=prsa
@@ -40,3 +77,42 @@ self.female.2=prsou
 years.1=rok
 years.2=roky
 years.5=let
+months.6=m\u011bsíc\u016f
+// TODO - dodelat typy
+
+
+"GYNECOLOGY_AND_OBSTETRICS",
+"INTERN",
+"OCULAR",
+"SURGERY",
+"ORTHOPEDICS",
+"REHABILITATION",
+"PSYCHIATRY",
+"NEUROLOGY",
+"TANNER",
+"PSYCHOLOGY",
+"ENDOCRINOLOGY_AND_HORMONES",
+"DENTAL HYGIENE",
+"CARDIOLOGY",
+"ORL",
+"SPEECH_THERAPIST",
+"UROLOGY",
+"ALLERGOLOGY",
+"IMMUNOLOGY",
+"ORTHODONTICS",
+"PULMONARY",
+"HEMATOLOGY",
+"GASTROENTEROLOGY",
+"RHEUMATOLOGY",
+"PALLIATIVE_MEDICINE",
+"NEPHROLOGY",
+"VASCULAR",
+"ERGOTHERAPY",
+"ONCOLOGY",
+"NUTRITION",
+"PHONIATRICS",
+"GENETICS",
+"SPORTS_MEDICINE",
+"SEXOLOGY",
+"REPRODUCTIVE_MEDICINE",
+"OTHER"
