--- a/backend/src/main/resources/texts/notification.properties
+++ b/backend/src/main/resources/texts/notification.properties
@@ -1,13 +1,13 @@
 prevention.title=Hola, hola, prevence volá!
-prevention.text=Mrkni, na které preventivní prohlídky se objednat.
+prevention.text=Mrkni, na které prohlídky se objednat.
 completion.title=Byl/a jsi na prohlídce?
-completion.text=Potvr\u010f preventivní prohlídku v aplikaci a získej odm\u011bnu.
+completion.text=Potvr\u010f prohlídku v aplikaci a získej odm\u011bnu.
 order.2months.ahead.title=Objednej se _TYPE_
-order.2months.ahead.text=_INTERVAL_ utekl/y jako voda, je \u010das se objednat na preventivní prohlídku.
+order.2months.ahead.text=_INTERVAL_ utekl/y jako voda, je \u010das se objednat na prohlídku.
 order.month.ahead.title=Nejvy\u0161\u0161í \u010das zajít _TYPE_
-order.month.ahead.text=Jsou/je to u\u017e _INTERVAL_ od poslední prohlídky. Objednej se je\u0161t\u011b dnes, a\u0165 neztratí\u0161 _BADGE_.
+order.month.ahead.text=Jsou/je to u\u017e _INTERVAL_ od poslední prohlídky. Objednej se na prohlídku je\u0161t\u011b dnes!
 coming.visit.title=Zítra t\u011b \u010deká prohlídka
-coming.visit.text=Zítra jde\u0161 _TYPE_ na preventivní prohlídku.
+coming.visit.text=Zítra jde\u0161 _TYPE_ na prohlídku.
 self.first.title=První samovy\u0161et\u0159ení \u010deká
 self.first.text=Zvládne ho opravu ka\u017edý a nezabere to ani p\u011bt minut.
 self.common.title=Je \u010das na samovy\u0161et\u0159ení
