jmx integration - work localy, tried remote connection to localhost:49185

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
   web:
     resources:
       add-mappings: false
+  jmx:
+    enabled: true
+    unique-names: true
+    domain: 'cz.loono.backend'
 # Logger configuration
 logging:
   pattern:
@@ -40,6 +44,14 @@ management.endpoint.health.show-details: always
 management.health:
   db.enabled: true
   diskspace.enabled: false
+# JMX
+management.endpoint.web.exposure.include: '*'
+management.endpoint.jmx:
+  domain: 'cz.loono.backend'
+  enabled: true
+  unique-names: true
+
+# Cron
 scheduler.cron:
   daily-task: "0 0 3 * * ?"
   data-update: "0 0 2 2 * ?"
