Introduce prometheus metrics with simple counter example
- Prometheus metrics are available on unsecured endpoint `actuator/prometheus`. The endpoint provide JVM, DB connection, controller metrics, and more.
- For custom metric `@Counted` and `@Timed annotation might be used.
- Simple metric `healthcare_providers_get_all_data` is used for demo purpose. It's available under `healthcare_providers_get_all_data_total` metric name

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -39,6 +39,13 @@ management.endpoint.health.show-details: always
 management.health:
   db.enabled: true
   diskspace.enabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+
 scheduler.cron:
   daily-task: "0 0 3 * * ?"
   data-update: "0 0 2 2 * ?"
