Added basic Prometheus metrics and two sample counters

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -37,6 +37,11 @@ server:
   error.path: "/error"
 # Health indicators
 management.endpoint.health.show-details: always
+management:
+  endpoints:
+    web:
+      exposure:
+        include: [ "health", "prometheus" ]
 management.health:
   db.enabled: true
   diskspace.enabled: false
