--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -13,6 +13,8 @@ env:
   TF_VAR_google-app-credentials: ${{ secrets.DEVEL_GOOGLE_APPLICATION_CREDENTIALS }}
   TF_VAR_onesignal-api-key: ${{ secrets.DEVEL_ONESIGNAL_API_KEY }}
   TF_VAR_onesignal-app-id: ${{ secrets.DEVEL_ONESIGNAL_APP_ID }}
+  TF_VAR_smartemailing-user: ${{ secrets.DEVEL_SMARTEMAILING_USER }}
+  TF_VAR_smartemailing-psw: ${{ secrets.DEVEL_SMARTEMAILING_PSW }}
 jobs:
   terraform:
     name: 'Terraform'
